50-gateway-routes/argocd-apps-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-apps-ui
  namespace: argocd-apps
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - argocd-apps.prod.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-apps-server
          port: 80
