50-gateway-routes/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
  hostnames:
    - argocd.prod.kiac.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
